@@ -9,6 +9,12 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+2000-01-19  Matt Ettus  <matt@ettus.com>
+
+	* src/x_dialog.c:  Merged in Ales's changes
+
+	* src/x_dialog.c:  Lot's of rework on multi-attrib editor
+
 2000-01-18  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/x_dialog.c: Moved some code around and added a check to 
